--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,30 @@ body {
   border: 1px solid #444;
   border-radius: 5px;
 }
+.sidebar .list.tags .tag-size-1,
+.posts .list.tags .tag-size-1 {
+  color: red;
+}
+.sidebar .list.tags .tag-size-2,
+.posts .list.tags .tag-size-2 {
+  color: #dbdb14;
+  font-size: 1.1em;
+}
+.sidebar .list.tags .tag-size-3,
+.posts .list.tags .tag-size-3 {
+  color: blue;
+  font-size: 1.2em;
+}
+.sidebar .list.tags .tag-size-4,
+.posts .list.tags .tag-size-4 {
+  color: green;
+  font-size: 1.3em;
+}
+.sidebar .list.tags .tag-size-5,
+.posts .list.tags .tag-size-5 {
+  color: violet;
+  font-size: 1.5em;
+}
 
 /* Logo */
 .logo {
@@ -80,6 +104,25 @@ body {
 }
 
 /* Authors */
+.authors .author-size-1 {
+  color: red;
+}
+.authors .author-size-2 {
+  color: #dbdb14;
+  font-size: 1.1em;
+}
+.authors .author-size-3 {
+  color: blue;
+  font-size: 1.2em;
+}
+.authors .author-size-4 {
+  color: green;
+  font-size: 1.3em;
+}
+.authors .author-size-5 {
+  color: violet;
+  font-size: 1.5em;
+}
 .authors li {
   margin-bottom: 12px;
 }
