--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,6 +68,32 @@ body {
   padding: 40px;
   border: 1px solid $color-dark;
   border-radius: 5px;
+
+  .list.tags {
+    .tag-size-1 {
+      color: red;
+    }
+
+    .tag-size-2 {
+      color: rgb(219, 219, 20);
+      font-size: 1.1em;
+    }
+
+    .tag-size-3 {
+      color: blue;
+      font-size: 1.2em;
+    }
+
+    .tag-size-4 {
+      color: green;
+      font-size: 1.3em;
+    }
+
+    .tag-size-5 {
+      color: violet;
+      font-size: 1.5em;
+    }
+  }
 }
 
 /* Logo */
@@ -101,6 +127,30 @@ body {
 /* Authors */
 
 .authors {
+  .author-size-1 {
+    color: red;
+  }
+
+  .author-size-2 {
+    color: rgb(219, 219, 20);
+    font-size: 1.1em;
+  }
+
+  .author-size-3 {
+    color: blue;
+    font-size: 1.2em;
+  }
+
+  .author-size-4 {
+    color: green;
+    font-size: 1.3em;
+  }
+
+  .author-size-5 {
+    color: violet;
+    font-size: 1.5em;
+  }
+
   li {
     margin-bottom: 12px;
   }
