--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,600|Sacramento|Source+Sans+Pro:300&subset=latin-ext");
+
 /* Variables */
 /* Global */
 *,
@@ -27,6 +28,7 @@ body {
   font-family: "Oswald", sans-serif;
   font-weight: 600;
 }
+
 .section-title span {
   text-transform: none;
   font-weight: 400;
@@ -35,15 +37,18 @@ body {
 
 /* Layout */
 .wrapper {
+  display: -ms-flexbox;
   display: flex;
   margin-left: 10px;
 }
 
 .sidebar {
+  -ms-flex: 1 0 0px;
   flex: 1 0 0;
 }
 
 .posts {
+  -ms-flex: 2 0 0px;
   flex: 2 0 0;
 }
 
@@ -55,25 +60,30 @@ body {
   border: 1px solid #444;
   border-radius: 5px;
 }
+
 .sidebar .list.tags .tag-size-1,
 .posts .list.tags .tag-size-1 {
   color: red;
 }
+
 .sidebar .list.tags .tag-size-2,
 .posts .list.tags .tag-size-2 {
   color: #dbdb14;
   font-size: 1.1em;
 }
+
 .sidebar .list.tags .tag-size-3,
 .posts .list.tags .tag-size-3 {
   color: blue;
   font-size: 1.2em;
 }
+
 .sidebar .list.tags .tag-size-4,
 .posts .list.tags .tag-size-4 {
   color: green;
   font-size: 1.3em;
 }
+
 .sidebar .list.tags .tag-size-5,
 .posts .list.tags .tag-size-5 {
   color: violet;
@@ -95,6 +105,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .list .active {
   font-weight: bold;
 }
@@ -107,22 +118,27 @@ body {
 .authors .author-size-1 {
   color: red;
 }
+
 .authors .author-size-2 {
   color: #dbdb14;
   font-size: 1.1em;
 }
+
 .authors .author-size-3 {
   color: blue;
   font-size: 1.2em;
 }
+
 .authors .author-size-4 {
   color: green;
   font-size: 1.3em;
 }
+
 .authors .author-size-5 {
   color: violet;
   font-size: 1.5em;
 }
+
 .authors li {
   margin-bottom: 12px;
 }
@@ -131,6 +147,7 @@ body {
 .post {
   display: none;
 }
+
 .post.active {
   display: block;
 }
@@ -140,8 +157,12 @@ body {
 }
 
 .post-tags {
+  display: -ms-flexbox;
   display: flex;
 }
+
 .post-tags p {
   margin: 0 10px 0 0;
 }
+
+/*# sourceMappingURL=style.css.map */
