--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,7 +68,9 @@ body {
   padding: 40px;
   border: 1px solid $color-dark;
   border-radius: 5px;
+}
 
+.sidebar {
   .list.tags {
     .tag-size-1 {
       color: red;
